# graphix

./: .gitignore  README.md
Project_1/: CMakeLists.txt  main.c
Project_1/testres/: p3.ppm  raw.ppm
Project_2/: CMakeLists.txt  JSONParser.h  Makefile  PixTool.h  RayTracer.h  SimpleMakefile  VectorMath.h  json_parser.c  objects.json  output2.ppm  tracer.c
